# AIOps

./: .gitignore  README.md
backend/: .env.example  CLAUDE.md  README.md  next.md  pyproject.toml
backend/app/: main.py
backend/app/api/: alerts.py  health.py
backend/app/core/: background.py  config.py  database.py  response.py
backend/app/db/: __init__.py  crud.py  models.py
backend/app/models/: schemas.py
backend/app/repository/: __init__.py  alert_repository.py  analysis_repository.py
backend/app/schemas/: __init__.py  alert_schema.py  analysis_schema.py  common_schema.py
backend/app/services/: __init__.py  alert_analyzer.py  alert_processor.py  llm_service.py  prometheus_client.py
backend/tests/: __init__.py
docs/superpowers/plans/: 2026-03-29-aiops-mvp-implementation.md
docs/superpowers/specs/: 2026-03-29-aiops-mvp-design.md
frontend/: .eslintrc.cjs  .gitignore  .stylelintrc.cjs  CLAUDE.md  README.md  index.html  package-lock.json  package.json  uno.config.ts
frontend/docs/superpowers/plans/: 2026-04-04-frontend-theme-refresh.md
frontend/docs/superpowers/specs/: 2026-04-04-frontend-refresh-design.md
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: AppLayout.vue  Badge.vue  GlobalBlobs.vue  OrgButton.vue  OrgCard.vue  Sidebar.vue  TopBar.vue
frontend/src/router/: index.ts
frontend/src/stores/: index.ts
frontend/src/styles/: index.css  theme.css  variables.css
frontend/src/types/: index.ts
frontend/src/views/: AlertDetail.vue  Alerts.vue  Analyses.vue  Dashboard.vue
(+8 files in other folders)
